--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,9 +44,9 @@ jobs:
 
 # build-and-test라는 workflow에는 build-and-test라는 Job을 가지고 있다는 의미입니다.
 workflows:
-    build-and-test:
+    build:
       jobs:
         - build-and-test 
         - docker
             requires:
-              - test
+              - build-and-test
