--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,11 @@ jobs:
           - run: npm install
           - run: docker build -t circleci/example .
           - run: docker save -o circleci-example.tar circleci/example
+          - add_ssh_keys:
+              fingerprints:
+                - "1e:d7:d2:ec:6d:2f:62:98:bd:c5:e4:59:3c:3f:de:68"
+          - run: rsync -ah -e "ssh -o StrictHostKeyChecking=no" circleci-example.tar username@server.address:/path/to/send
+          - run: ssh username@server.address "cd /path/to/send; docker load -i circleci-example.tar; docker run circleci/example"
 
 # build-and-test라는 workflow에는 build-and-test라는 Job을 가지고 있다는 의미입니다.
 workflows:
@@ -50,3 +55,6 @@ workflows:
         - docker
             requires:
               - build-and-test
+            filters:
+              branches:	
+                only: master 
