--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ workflows:
     build:
       jobs:
         - build-and-test 
-        - docker
+        - docker:
             requires:
               - build-and-test
             filters:
