--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,4 +57,4 @@ workflows:
               - build-and-test
             filters:
               branches:
-                only: master 
+                only: main 
