--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
               fingerprints:
                 - "1e:d7:d2:ec:6d:2f:62:98:bd:c5:e4:59:3c:3f:de:68"
           - run: rsync -ah -e "ssh -o StrictHostKeyChecking=no" circleci-example.tar username@server.address:/path/to/send
-          - run: ssh username@server.address "cd /path/to/send; docker load -i circleci-example.tar; docker run circleci/example"
+          - run: ssh sangoh@52.231.30.135 "cd /path/to/send; docker load -i circleci-example.tar; docker run circleci/example"
 
 # build-and-test라는 workflow에는 build-and-test라는 Job을 가지고 있다는 의미입니다.
 workflows:
